--- a/Preprocessing/Dockerfile
+++ b/Preprocessing/Dockerfile
@@ -3,4 +3,5 @@ FROM amusanga/ml-pipeline-base:v1
 
 WORKDIR /app
 COPY ./preprocessing.py /app/preprocessing.py
+ENTRYPOINT [ "python preprocessing.py" ]
 
